2001-08-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/term.c (list_terms): Sort terminals by name before
 	displaying. Code by Ulrich Gruenebaum, modified and cleaned up by
 	me
	(termcomp): New function. Comparison function for qsort() to be
 	used by list_terms.

2001-08-17  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Some bits extracted from a patchset by Ulrich Gruenebaum
 	<grueneba@zkom.de>:
	
	* src/stdfn.c (gp_stricmp): Corrected sign of return value, to
 	match that of predefined library function stricmp() which it tries
 	to mimic. I changed arguments to 'const', and internal variabales
 	to unsigned char to avoid char signedness and constness problems.
	(gp_strnicmp): Dito.

	* docs/gnuplot.doc: Fixed minor typo in "help set" text.

2001-08-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/set.c (set_label): Don't reduce pointstyle number modulo
 	POINT_TYPES --- the terminal drivers know how to deal with that,
 	already, and POINT_TYPES is incorrect for many terminals.  Removed
 	long-commented-out checks, while at it, and fixed indentation.

	* doc/gnuplot.doc: Lots of typos fixed.  Reported by Shigeharu
 	TAKENO <shige@iee.niit.ac.jp>.
	
2001-08-09  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	A new 'smooth' method, implemented by Todd Lewis
 	<utoddl@email.unc.edu>. This is a modified version of Patch
 	#438326 from SourceForge.
	
	* src/gp_types.h (enum PLOT_SMOOTH): New label SMOOTH_FREQUENCY.

	* src/tables.c (plot_smooth_tbl): Added parse table entry for
 	smooth option 'f$requency'.

	* src/plot2d.c (plot_smooth_names): Added entry for "Frequency".
	(eval_plots): Added handling for case SMOOTH_FREQUENCY.

	* src/interpol.c (do_freq): New function to implement 'smooth
 	frequency'. Takes care of extending the axis ranges, if
 	autoscalilng.
	(gen_interp_frequency): New function, replaces gen_interp() for
 	this particular smoothing method.